--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Cookie & Crumb — Cake Decorating</title>
+  <title>Making Cakes</title>
 
   <style>
     :root {
@@ -128,7 +128,6 @@
 
     ul { margin-left: 1.2rem; }
 
-    /* Cake Gallery */
     .cake-card img {
       width: 100%;
       height: 180px;
@@ -162,7 +161,7 @@
     <header>
       <div class="brand">
         <div class="logo" aria-hidden="true">🍂</div>
-        <h1>Cookie & Crumb — Cake Decorating</h1>
+        <h1>Making Cakes</h1>
       </div>
 
       <nav aria-label="Primary">
@@ -177,15 +176,13 @@
     </header>
 
     <main>
-      <!-- WHAT -->
       <section id="what" class="active">
-        <h2>What — Home</h2>
+        <h2>Making Cakes | What</h2>
         <div class="grid">
           <article class="card">
             <h3>Welcome to My Cake Making Journey</h3>
-            <p>Over the last year, I’ve gotten into baking and decorating custom cakes! I love experimenting with stacking layers of tres leches cake, testing icing textures, and creating my own homemade fillings.</p>
+            <p>Over the last year, I’ve gotten into baking and decorating cakes, specifically tres leches cakes! I love experimenting with different cake themes, testing icing textures, and creating my own homemade fillings.</p>
           </article>
-
           <article class="card">
             <h3>Signature Styles</h3>
             <ul>
@@ -197,43 +194,38 @@
         </div>
       </section>
 
-      <!-- WHO -->
       <section id="who">
-        <h2>Who — About Me</h2>
+        <h2>Making Cakes | Who</h2>
         <div class="grid">
           <article class="card">
-            <p>I'm Zainab — I started cake decorating as a creative outlet and turned it into a passion for sharing celebration sweets with friends and family.</p>
+            <p>I'm Zainab! I started cake decorating after watching several tiktok videos of cake decorators making the most intricate and yummy cakes and being inspired to do the same. It started off rough and was a big learning curve but eventually I learned different tips and tricks and became confident in my ability to make cakes. Cakes have now become a creative outlet for me to experiment with different flavors and styles for every special ocassion.</p>
           </article>
-
           <article class="card">
-            <p>I bake for family events and special occasions. I’m still working on getting smoother bases and perfecting my technique, but I hope to one day start a small side business selling cakes.</p>
+            <p>I bake for family events and special occasions. I’m still working on getting smoother bases and perfecting my technique, but I hope to eventually start a small side business making and selling cakes for other people.</p>
           </article>
         </div>
       </section>
 
-      <!-- WHEN -->
       <section id="when">
-        <h2>When — Schedule & Seasons</h2>
+        <h2>Making Cakes | When</h2>
         <div class="grid">
           <article class="card">
-            <p>I bake all year round, each season inspires new flavors and decorations. My sister’s wedding was one of my favorite projects, and I got to make cakes for several of her events!</p>
+            <p>I bake all year round, each season inspires new flavors and decorations. Most recently for my sister’s wedding I got to make several cakes for her events which was incredibly special. </p>
           </article>
         </div>
       </section>
 
-      <!-- WHERE -->
       <section id="where">
-        <h2>Where — My Kitchen</h2>
+        <h2>Making Cakes | Where</h2>
         <div class="grid">
           <article class="card">
-            <p>I typically bake in my home kitchen. I usually make one cake at a time, but I once baked a seven-layer two-tier cake that I had to store as two separate cakes before stacking them.</p>
+            <p>I typically bake in my home kitchen. I usually make one cake at a time so am not in need of a bigger space. The biggest cake I've baked was a seven-layer two-tier cake that I had to store as two separate cakes until it was close to the event time and I could stack them.</p>
           </article>
         </div>
       </section>
 
-      <!-- HOW -->
       <section id="how">
-        <h2>How — Techniques & Process</h2>
+        <h2>Making Cakes | How</h2>
         <div class="grid">
           <article class="card">
             <h3>Techniques I Use</h3>
@@ -246,56 +238,48 @@
         </div>
       </section>
 
-      <!-- WHY -->
       <section id="why">
-        <h2>Why — Motivation & Purpose</h2>
+        <h2>Making Cakes | Why</h2>
         <div class="grid">
           <article class="card">
             <h3>Why I Bake</h3>
-            <p>Baking is creative therapy for me, it’s both technical and artistic, which makes it so rewarding. It’s a perfect mix of patience, skill, and creativity.</p>
+            <p>Baking is a form of creative therapy for me, it’s both technical and artistic, which makes it so rewarding. It’s a perfect mix of patience, skill, and creativity that I have find very enjoyable.</p>
           </article>
-
           <article class="card">
-            <h3>The Joy of Sharing</h3>
-            <p>Sharing cakes creates small moments of joy. Seeing friends and family enjoy what I made and look forward to having my cake at any ocassion is especially rewarding.</p>
+            <h3>Sharing My Cake</h3>
+            <p>Making cakes creates small moments of joy. Seeing friends and family enjoy what I made and look forward to having my cake at any occasion is especially rewarding.</p>
           </article>
         </div>
       </section>
 
-      <!-- JOURNEY -->
       <section id="journey">
-        <h2>Cake Journey — My Progress</h2>
+        <h2>Making Cakes | Cake Journey</h2>
         <div class="grid">
           <article class="card cake-card">
             <h4>Cake #1</h4>
             <img alt="not pictured">
-            <p>Not pictured because it was really bad and did not think to take a picture of it in the moment!</p>
+            <p>Not pictured because it was really bad and I did not think to take a picture of it in the moment!</p>
           </article>
-
           <article class="card cake-card">
             <h4>Cake #2</h4>
             <img src="./images/cake_2.jpeg" alt="Cake #2 Image Placeholder">
             <p>Too wet, the cake fell apart when stacking the layers, but it was delicious!</p>
           </article>
-
           <article class="card cake-card">
             <h4>Cake #3</h4>
             <img src="./images/cake_3.JPG" alt="Cake #3 Image Placeholder">
-            <p>My graduation cake! Everything was perfect! I loved the decortions, color, icing, and the taste was perfect.</p>
+            <p>My graduation cake! Everything was perfect! I loved the decorations, color, icing, and the taste was perfect.</p>
           </article>
-
           <article class="card cake-card">
             <h4>Cake #4</h4>
             <img src="./images/cake_4.jpg" alt="Cake #4 Image Placeholder">
-            <p>First two-tier cake! The dark icing was very hard to achieve. I eneded up melting my icing in the process, but it tasted amazing.</p>
+            <p>First two-tier cake! The dark icing was very hard to achieve. I ended up melting my icing in the process, but it tasted amazing.</p>
           </article>
-
           <article class="card cake-card">
             <h4>Cake #5</h4>
             <img src="./images/cake_5.jpg" alt="Cake #5 Image Placeholder">
             <p>Perfect color for the event. Did small piping, not the smoothest but it was still very nice. It also survived a 45-minute drive without moving!</p>
           </article>
-
           <article class="card cake-card">
             <h4>Cake #6</h4>
             <img src="./images/cake_6.jpg" alt="Cake #6 Image Placeholder">
@@ -306,7 +290,27 @@
     </main>
 
     <footer>
+      <p>© 2025 — All Rights Reserved</p>
     </footer>
   </div>
+
+  <script>
+    const navLinks = document.querySelectorAll(".nav-link");
+    const sections = document.querySelectorAll("section");
+
+    navLinks.forEach(link => {
+      link.addEventListener("click", () => {
+        // Remove active from all sections
+        sections.forEach(section => section.classList.remove("active"));
+        // Remove aria-current from all buttons
+        navLinks.forEach(btn => btn.removeAttribute("aria-current"));
+
+        // Activate clicked section
+        const target = link.getAttribute("data-target");
+        document.getElementById(target).classList.add("active");
+        link.setAttribute("aria-current", "true");
+      });
+    });
+  </script>
 </body>
 </html>
