--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -177,7 +177,7 @@
 
     <main>
       <section id="what" class="active">
-        <h2>Making Cakes || What</h2>
+        <h2>Making Cakes ~ What</h2>
         <div class="grid">
           <article class="card">
             <h3>Welcome to My Cake Making Journey</h3>
@@ -195,7 +195,7 @@
       </section>
 
       <section id="who">
-        <h2>Making Cakes || Who</h2>
+        <h2>Making Cakes ~ Who</h2>
         <div class="grid">
           <article class="card">
             <p>I'm Zainab! I started cake decorating after watching several tiktok videos of cake decorators making the most intricate and yummy cakes and being inspired to do the same. It started off rough and was a big learning curve but eventually I learned different tips and tricks and became confident in my ability to make cakes. Cakes have now become a creative outlet for me to experiment with different flavors and styles for every special ocassion.</p>
@@ -207,7 +207,7 @@
       </section>
 
       <section id="when">
-        <h2>Making Cakes || When</h2>
+        <h2>Making Cakes ~ When</h2>
         <div class="grid">
           <article class="card">
             <p>I bake all year round, each season inspires new flavors and decorations. Most recently for my sister’s wedding I got to make several cakes for her events which was incredibly special. </p>
@@ -216,7 +216,7 @@
       </section>
 
       <section id="where">
-        <h2>Making Cakes || Where</h2>
+        <h2>Making Cakes ~ Where</h2>
         <div class="grid">
           <article class="card">
             <p>I typically bake in my home kitchen. I usually make one cake at a time so am not in need of a bigger space. The biggest cake I've baked was a seven-layer two-tier cake that I had to store as two separate cakes until it was close to the event time and I could stack them.</p>
@@ -225,7 +225,7 @@
       </section>
 
       <section id="how">
-        <h2>Making Cakes || How</h2>
+        <h2>Making Cakes ~ How</h2>
         <div class="grid">
           <article class="card">
             <h3>Techniques I Use</h3>
@@ -239,7 +239,7 @@
       </section>
 
       <section id="why">
-        <h2>Making Cakes || Why</h2>
+        <h2>Making Cakes ~ Why</h2>
         <div class="grid">
           <article class="card">
             <h3>Why I Bake</h3>
@@ -253,7 +253,7 @@
       </section>
 
       <section id="journey">
-        <h2>Making Cakes || Cake Journey</h2>
+        <h2>Making Cakes ~ Cake Journey</h2>
         <div class="grid">
           <article class="card cake-card">
             <h4>Cake #1</h4>
