--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -199,9 +199,11 @@
         <h2>Making Cakes ~ Who</h2>
         <div class="grid">
           <article class="card">
+            <h3>Who Am I</h3>
             <p>I'm Zainab! I started cake decorating after watching several tiktok videos of cake decorators making the most intricate and yummy cakes and being inspired to do the same. It started off rough and was a big learning curve but eventually I learned different tips and tricks and became confident in my ability to make cakes. Cakes have now become a creative outlet for me to experiment with different flavors and styles for every special ocassion.</p>
           </article>
           <article class="card">
+            <h3>Who do I bake for</h3>
             <p>I bake for family events and special occasions. I’m still working on getting smoother bases and perfecting my technique, but I hope to eventually start a small side business making and selling cakes for other people.</p>
           </article>
         </div>
@@ -211,6 +213,7 @@
         <h2>Making Cakes ~ When</h2>
         <div class="grid">
           <article class="card">
+            <h3>When do I bake</h3>
             <p>I bake all year round, each season inspires new flavors and decorations. Most recently for my sister’s wedding I got to make several cakes for her events which was incredibly special. </p>
           </article>
         </div>
@@ -220,6 +223,7 @@
         <h2>Making Cakes ~ Where</h2>
         <div class="grid">
           <article class="card">
+            <h3>Where do I bake</h3>
             <p>I typically bake in my home kitchen. I usually make one cake at a time so am not in need of a bigger space. The biggest cake I've baked was a seven-layer two-tier cake that I had to store as two separate cakes until it was close to the event time and I could stack them.</p>
           </article>
         </div>
