--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -85,7 +85,7 @@
       border-radius: 12px;
     }
 
-    section.active {
+    .active {
       display: block;
     }
 
@@ -138,7 +138,7 @@
       background-color: #f5d6b4;
     }
 
-    .cake-card h4 {
+    .cake-card {
       font-size: 1.1rem;
       color: var(--accent);
       margin-bottom: 0.4rem;
