--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -101,7 +101,7 @@
     .grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: IDENT(1.2rem);
+      gap: IDENT;
     }
 
     .card {
