--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -301,8 +301,8 @@
     const navLinks = document.querySelectorAll(".nav-link");
     const sections = document.querySelectorAll("section");
 
-    navLinks.forEach(link => {
-      link.addEventListener("click", () => {
+    navLinks.forEach(link =>) {
+      link.addEventListener("click", () =>) {
         // Remove active from all sections
         sections.forEach(section => section.classList.remove("active"));
         // Remove aria-current from all buttons
