--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -130,12 +130,14 @@
 
     .cake-card img {
       width: 100%;
-      height: 180px;
-      object-fit: cover;
+      max-width: 400px;
+      height: auto;
       border-radius: 10px;
-      margin-bottom: 0.7rem;
+      margin: 0 auto 0.7rem;
+      display: block;
       background-color: #f5d6b4;
     }
+
 
     .cake-card {
       font-size: 1.1rem;
