--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -127,17 +127,16 @@
     }
 
     ul { margin-left: 1.2rem; }
+    
 
     .cake-card img {
       width: 100%;
-      max-width: 400px;
-      height: auto;
+      height: 180px;
+      object-fit: cover;
       border-radius: 10px;
-      margin: 0 auto 0.7rem;
-      display: block;
+      margin-bottom: 0.7rem;
       background-color: #f5d6b4;
     }
-
 
     .cake-card {
       font-size: 1.1rem;
