--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -195,7 +195,7 @@
     </header>
 
     <main aria-live="polite">
-      <section id="what" class="active" role="region">
+      <section id="what" class="active">
         <h2>Making Cakes ~ What</h2>
         <div class="grid">
           <article class="card">
@@ -217,7 +217,7 @@
         </div>
       </section>
 
-      <section id="who" role="region">
+      <section id="who">
         <h2>Making Cakes ~ Who</h2>
         <div class="grid">
           <article class="card">
@@ -235,7 +235,7 @@
         </div>
       </section>
 
-      <section id="when" role="region">
+      <section id="when">
         <h2>Making Cakes ~ When</h2>
         <div class="grid">
           <article class="card">
@@ -249,7 +249,7 @@
         </div>
       </section>
 
-      <section id="where" role="region">
+      <section id="where">
         <h2>Making Cakes ~ Where</h2>
         <div class="grid">
           <article class="card">
@@ -263,7 +263,7 @@
         </div>
       </section>
 
-      <section id="how" role="region">
+      <section id="how">
         <h2>Making Cakes ~ How</h2>
         <div class="grid">
           <article class="card">
@@ -281,7 +281,7 @@
         </div>
       </section>
 
-      <section id="why" role="region">
+      <section id="why">
         <h2>Making Cakes ~ Why</h2>
         <div class="grid">
           <article class="card">
@@ -299,7 +299,7 @@
         </div>
       </section>
 
-      <section id="ai" role="region">
+      <section id="ai">
         <h2>AI Prompts</h2>
         <div class="card">
           <p><strong>AI Prompts used for images:</strong></p>
