--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -98,6 +98,7 @@
     .grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 1rem;
     }
 
     .card {
@@ -199,10 +200,10 @@
         <div class="grid">
           <article class="card">
             <h3>Welcome to My Cake Making Journey</h3>
-            <p>Over the last year, I’ve gotten into baking and decorating cakes, specifically tres leches cakes! I love experimenting with different cake themes, testing icing textures, and creating my own homemade fillings.</p>
+            <p>Over the last year, I've gotten into baking and decorating cakes, specifically tres leches cakes! I love experimenting with different cake themes, testing icing textures, and creating my own homemade fillings.</p>
             <figure>
               <img src="./images/ai_image_1.png" alt="cake supplies on a counter">
-              <figcaption><em>AI prompt used: “generate a photo of cake baking supplies on a counter.”</em></figcaption>
+              <figcaption><em>AI prompt used: "generate a photo of cake baking supplies on a counter."</em></figcaption>
             </figure>
           </article>
           <article class="card">
@@ -224,12 +225,12 @@
             <p>I'm Zainab! I started cake decorating after watching several TikTok videos of cake decorators making the most intricate and yummy cakes and being inspired to do the same.</p>
             <figure>
               <img src="./images/ai_image_2.png" alt="Cake decorating setup">
-              <figcaption><em>AI prompt used: “generate a cartoon photo of a hijabi girl decorating a cake.”</em></figcaption>
+              <figcaption><em>AI prompt used: "generate a cartoon photo of a hijabi girl decorating a cake."</em></figcaption>
             </figure>
           </article>
           <article class="card">
             <h3>Who do I bake for</h3>
-            <p>I bake for family events and special occasions. I’m still working on getting smoother bases and perfecting my technique, but I hope to eventually start a small side business making and selling cakes for other people.</p>
+            <p>I bake for family events and special occasions. I'm still working on getting smoother bases and perfecting my technique, but I hope to eventually start a small side business making and selling cakes for other people.</p>
           </article>
         </div>
       </section>
@@ -239,10 +240,10 @@
         <div class="grid">
           <article class="card">
             <h3>When do I bake</h3>
-            <p>I bake all year round; each season inspires new flavors and decorations. Most recently, for my sister’s wedding, I got to make several cakes for her events which was incredibly special.</p>
+            <p>I bake all year round; each season inspires new flavors and decorations. Most recently, for my sister's wedding, I got to make several cakes for her events which was incredibly special.</p>
             <figure>
               <img src="./images/cake_5.jpg" alt="orange cake with mr and mrs cake toppe and pink and orange flowers">
-              <figcaption><em>This is a picture of a cake I made for one of my sister's pre-wedding events! It was very fun to make and everyone loved it. </em></figcaption>
+              <figcaption><em>This is a picture of a cake I made for one of my sister's pre-wedding events! It was very fun to make and everyone loved it.</em></figcaption>
             </figure>
           </article>
         </div>
@@ -255,8 +256,8 @@
             <h3>Where do I bake</h3>
             <p>I typically bake in my home kitchen. I usually make one cake at a time so am not in need of a bigger space. The biggest cake I've baked was a seven-layer two-tier cake that I had to store as two separate cakes until it was close to the event time and I could stack them.</p>
             <figure>
-              <img src="./images/ai_image_3.png" alt="girl using standmixer at a Home kitchen counter  ">
-              <figcaption><em>AI prompt used: “Using the last image as reference create an image of the same girl standing by a standmixer in a home kitchen with her back turned.”</em></figcaption>
+              <img src="./images/ai_image_3.png" alt="girl using standmixer at a Home kitchen counter">
+              <figcaption><em>AI prompt used: "Using the last image as reference create an image of the same girl standing by a standmixer in a home kitchen with her back turned."</em></figcaption>
             </figure>
           </article>
         </div>
@@ -274,7 +275,7 @@
             </ul>
             <figure>
               <img src="./images/ai_image_4.png" alt="girl frosting cake on turn table">
-              <figcaption><em>AI prompt used: “create another image with the girl now facing forward again and frosting a cake on a turn table, doing the crumb coat.”</em></figcaption>
+              <figcaption><em>AI prompt used: "create another image with the girl now facing forward again and frosting a cake on a turn table, doing the crumb coat."</em></figcaption>
             </figure>
           </article>
         </div>
@@ -285,14 +286,14 @@
         <div class="grid">
           <article class="card">
             <h3>Why I Bake</h3>
-            <p>Baking is a form of creative therapy for me. It’s both technical and artistic, which makes it so rewarding. It’s a perfect mix of patience, skill, and creativity that I find very enjoyable.</p>
+            <p>Baking is a form of creative therapy for me. It's both technical and artistic, which makes it so rewarding. It's a perfect mix of patience, skill, and creativity that I find very enjoyable.</p>
           </article>
           <article class="card">
             <h3>Sharing With Others</h3>
             <p>Making cakes creates small moments of joy. Seeing friends and family enjoy what I made and look forward to having my cake at any occasion is especially rewarding.</p>
             <figure>
               <img src="./images/ai_image_5.png" alt="Friends sharing a cake">
-              <figcaption><em>AI prompt used: “generate an image of a final cake with strawberries on top of the cake and some piping. Then add some hands of people reaching towards the cake ready to dig in.”</em></figcaption>
+              <figcaption><em>AI prompt used: "generate an image of a final cake with strawberries on top of the cake and some piping. Then add some hands of people reaching towards the cake ready to dig in."</em></figcaption>
             </figure>
           </article>
         </div>
@@ -303,12 +304,12 @@
         <div class="card">
           <p><strong>AI Prompts used for images:</strong></p>
           <ul>
-            <li>“photo of a decorated tres leches cake on a wooden counter”</li>
-            <li>“person decorating a cake with piping bag on a pastel counter”</li>
-            <li>“pastel wedding cake with floral piping on white stand”</li>
-            <li>“home kitchen counter with cake baking tools and stand mixer”</li>
-            <li>“layered cake getting crumb coated with icing spatula”</li>
-            <li>“friends smiling and eating homemade cake at a kitchen table”</li>
+            <li>"photo of a decorated tres leches cake on a wooden counter"</li>
+            <li>"person decorating a cake with piping bag on a pastel counter"</li>
+            <li>"pastel wedding cake with floral piping on white stand"</li>
+            <li>"home kitchen counter with cake baking tools and stand mixer"</li>
+            <li>"layered cake getting crumb coated with icing spatula"</li>
+            <li>"friends smiling and eating homemade cake at a kitchen table"</li>
           </ul>
           <p><em>I used AI only for image generation.</em></p>
         </div>
@@ -316,8 +317,7 @@
     </main>
 
     <footer>
-      <p>© 2025 — All Rights Reserved 🍰 | 
-      </p>
+      <p>© 2025 — All Rights Reserved 🍰</p>
     </footer>
   </div>
 
@@ -325,16 +325,16 @@
     const navLinks = document.querySelectorAll(".nav-link");
     const sections = document.querySelectorAll("section");
 
-    navLinks.forEach(link =>) {
-      link.addEventListener("click", () =>) {
+    navLinks.forEach(link => {
+      link.addEventListener("click", () => {
         sections.forEach(section => section.classList.remove("active"));
         navLinks.forEach(btn => btn.removeAttribute("aria-current"));
 
         const target = link.getAttribute("data-target");
         document.getElementById(target).classList.add("active");
         link.setAttribute("aria-current", "true");
-      };
-    );
+      });
+    });
   </script>
 </body>
 </html>
