--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -98,7 +98,7 @@
     .grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 1rem;
+      grid-gap: 1rem;
     }
 
     .card {
